# Vector-Finance

./: README.md  essay_on_technology_impact.md  main.ipynb  main.py  pyproject.toml  utils.py
agents/: flight_agent.py  prompts.py  tools.py
backend/: app.py
research/: test.ipynb
