[project]
name = "vector-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.1",
    "deepagents>=0.2.4",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langchain-ollama>=1.0.0",
    "pydantic-ai>=1.18.0",
    "yfinance>=0.2.66",
]
